# HEPHero

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  addSelection.sh  docker-compose.yml  local_run.sh  packages  rmSelection.sh  runSelection.py  runSelection_EFT.py  setAnalysis.py  setup.py  submit_jobs.sh
.devcontainer/: Dockerfile  devcontainer.json
ABC/: README.md  setup.py
ABC/Datasets/: Bkg.py  Data.py  Data_Metadata.txt  MC_Metadata.txt  Samples.py  Signal.py
ABC/Datasets/Files/: README.md  check_data.py  check_mc.py  get_bkg.py  get_data_16.py  get_data_17.py  get_data_18.py  get_files.sh  get_signal.py
ABC/Metadata/: README.md
ABC/ana/: CMakeLists.txt  Test.cpp
ABC/include/: CMS.h  HEPHero.h  ML.h
ABC/src/: ANATools.cpp  CMakeLists.txt  EXPTools.cpp  HEPHeroB.cpp  HEPRoutines.cpp
Datasets/: Bkg.py  Data.py  Data_Metadata.txt  Data_Metadata_for_tests.txt  Data_Metadata_old.txt  InterfaceMatchboxTest-S123456790_dell.hepmc  MC_Metadata.txt  README.md  Samples.py  Signal.py  check_bkg.py  check_data.py  check_signal.py  get_bkg.py  get_data.py  get_private.py  get_signal.py  rucio.py  samples.py
Datasets/Files/: README.md  check_data.py  check_mc.py  get_bkg.py  get_data_16.py  get_data_17.py  get_data_18.py  get_files.sh  get_signal.py
HTCondor/: checker_jobs.py  condor.sh  condor.sub  condor_ref.sub
HTCondor/jobs_log/: README.md
ML/: README.md  condor.py  config_train.py  generate_trainer.py  submit_jobs.sh  tools.py  train.sh  train.sub
ML/condor/: README.md
ML/examples/: train_APSNN_test.py  train_DANN_DANN_test.py  train_NN_DANN_test.py  train_NN_bbZDM.py  train_NN_bbZDM_APNN.py  train_NN_bbZDM_all_equal.py  train_NN_bbZDM_all_evtsum.py  train_NN_bbZDM_param.py  train_NN_bbZDM_param_paper.py  train_NN_bbZDM_param_pca.py  train_PNET_AK8_Jets.py  train_PNET_HOTVR_Jets.py
ML/madminer/models/: __init__.py
ML/madminer/utils/: morphing.py
ML/models/APNN/: model.py  setup.py
ML/models/EFTNN/: model.py  setup.py
ML/models/NN/: model.py  setup.py
ML/models/PNN/: model.py  setup.py
ML/models/ResNet/: model.py  setup.py
Metadata/JES/: JES_MC_16_preVFP.txt  JES_MC_17.txt  JES_MC_18.txt  JES_SYS.cpp  JES_SYS.py
Metadata/ML/Keras/: preprocessing.json
Metadata/ML/Torch/: models.txt
Metadata/PDF/: get_pdf.py  pdf_type.json
Metadata/btag_eff/DeepCSVLoose/: 2016postVFP.json  2016preVFP.json  2017.json  2018.json
Metadata/btag_eff/DeepCSVMedium/: 2016postVFP.json  2016preVFP.json  2017.json  2018.json
Metadata/btag_eff/DeepJetLoose/: 2016postVFP.json  (+3 more)
Metadata/certificates/: certificates.txt  lumi_16_HIPM.txt  lumi_16_full.txt  lumi_16_nonHIPM.txt  lumi_calc.py  splitJSON.py
Metadata/trigger/: SF_2016.json  SF_2016_ttbar.json  SF_2017.json  SF_2017_ttbar.json  SF_2018.json  SF_2018_ttbar.json
PyLib/: LICENSE  README.md  install.sh  requirements.txt  setup.py  update.sh
PyLib/examples/: correlation_matrix.py  data_mc_plots_HHDM.py  data_mc_plots_LLG.py  efficiency_plots.py  general_plots.py  plots_with_syst.py
PyLib/src/: __init__.py
ana/: README.md
ana/templates/: Base.cpp  Cutflow.cpp  GenFirst.cpp  HepMC3_logic.txt  Test.cpp  TestOD.cpp
include/: CMS.h  HEPBase.h  HEPHero.h  RecoilCorrector.h  RoccoR.h  XYMETCorrection_withUL17andUL18andUL16.h  XYMETCorrection_withUL17andUL18andUL16_optimized.h  btageffanalyzer.h  correction.h  jet_resolution_corrector.h  keras_initial_model.json  lester_mt2_bisect.h  sf_trigger.h  ttbarReco_sonnenschein_desy.h  ttbarReco_sonnenschein_opendata.h  ttbarReco_sonnenschein_opendata_old.h
include/HighFive/: CMakeLists.txt  HighFiveConfig.cmake  HighFiveConfigVersion.cmake  HighFiveTargets.cmake
include/cpp-peglib/: peglib.h
include/fdeep/: model.hpp
include/libtorch_fix/: Functions.h
setups/: DM4b.py  DMTTBAR.py  EFT.py  GEN.py  HHDM.py  OPENDATA.py  README.md
src/: ANATools.cpp  CMSTools.cpp  CMakeLists.txt  GENTools.cpp  HEPHero.cpp  HEPHeroA.cpp  HEPObjects.cpp  HEPTools.cpp  OPENDATATools.cpp  RecoilCorrector.cc  RoccoR.cc  RunAnalysis.cpp  formula_ast.cc
src/HepMC3/: WriterDOT.cc
tools/: analysis.txt  checker.py  condor.py  cutflow.py  grouper.py  remove_jobs.py  resubmit_APV_16.txt  temp_resubmit_16.txt  temp_resubmit_17.txt  temp_resubmit_18.txt
(+1064 files in other folders)
